update jenkins with environment