@@ -1,6 +1,10 @@
 pipeline 
 {
     agent any
+
+    environment {
+        MAVEN_OPTS = "--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
+    }
     
     tools{
     	maven 'maven'
